# modular_card_game_suite

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: architecture.md  backlog.md
docs/sprints/: sprint-001-architect-handoff.md  sprint-001-report.md  sprint-002-architect-handoff.md  sprint-002-report.md  sprint-003-architect-handoff.md  sprint-003-report.md  sprint-004-architect-handoff.md  sprint-004-report.md  sprint-005-architect-handoff.md  sprint-005-report.md  sprint-006-architect-handoff.md  sprint-006-report.md  sprint-007-architect-handoff.md  sprint-007-report.md  sprint-008-architect-handoff.md  sprint-008-report.md
src/modular_card_game_suite/: __init__.py
src/modular_card_game_suite/client/: __init__.py  __main__.py  api_client.py  command_parser.py  main.py  renderer.py
src/modular_card_game_suite/decks/: __init__.py
src/modular_card_game_suite/decks/regular/: __init__.py  deck.py
src/modular_card_game_suite/engine/: __init__.py  cards.py  decks.py
src/modular_card_game_suite/games/: __init__.py  common.py
src/modular_card_game_suite/games/clown_game/: __init__.py  errors.py  game.py
src/modular_card_game_suite/server/: __init__.py  __main__.py  app.py  logging_config.py  main.py  models.py  session.py
tests/: test_client_api_client.py  test_client_command_parser.py  test_client_main.py  test_client_renderer.py  test_clown_game.py  test_game_common.py  test_game_interface.py  test_regular_deck.py  test_server.py
